--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "^5.2.0",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "ngx-alerts": "^2.2.2",
     "ngx-bootstrap": "^2.0.2",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
